Fix z-index issues
fix z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -221,28 +221,28 @@ li.cus-dropdown {
 	position: absolute;
 	height: 100px;
 	width: 300px;
-	z-index: 2001;
+	z-index: 5000;
 }
 
 .holder div {
 	/*border-left: 1 px solid #333; */
 	/*border-right: 1 px solid #333; */
 	border: 1px solid black;
-	padding:10px;
-	margin:0;
+	padding: 10px;
+	margin: 0;
 	background-color: red;
 }
 
 .top {
-	width:248px;
-	height:30px;
-	border:1px solid #333;
+	width: 248px;
+	height: 30px;
+	border: 1px solid #333;
 }
 
 .bottom {
-	width:248px;
-	height:10px;
-	border:1px solid #333;
+	width: 248px;
+	height: 10px;
+	border: 1px solid #333;
 }
 
 .collapsible-button:hover {
@@ -257,12 +257,12 @@ li.cus-dropdown {
 }
 
 .floating-banner {
-	position:fixed;
-	width:100%;
-	height:100px;
+	position: fixed;
+	width: 100%;
+	height: 100px;
 	background-color: blue;
-	z-index: 100000000;
-	bottom:0px;
+	z-index: 5000;
+	bottom: 0px;
 }
 
 .floatingbutton {
